--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -35,7 +35,7 @@
                     <a th:href="@{/admin/userManage}">用户管理</a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">分类管理</a>
+                    <a th:href="@{/admin/categoryManage}">分类管理</a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">帖子管理</a>
