第十一次提交 后台帖子管理以相关功能实现

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -38,7 +38,7 @@
                     <a th:href="@{/admin/categoryManage}">分类管理</a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">帖子管理</a>
+                    <a th:href="@{/admin/articleManage}">帖子管理</a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">评论管理</a>
