--- a/src/main/resources/templates/admin/articleManage.html
+++ b/src/main/resources/templates/admin/articleManage.html
@@ -13,7 +13,7 @@
         <div style="left: 200px; padding: 10px; height: 900px;" class="layui-panel">
             <div class="layui-tab layui-tab-brief" style="margin: 20px;">
                 <ul class="layui-tab-title">
-                    <li class="layui-this">用户信息</li>
+                    <li class="layui-this">帖子信息</li>
                 </ul>
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show">
@@ -21,13 +21,12 @@
                             <table class="layui-table" style="width: 1650px;" lay-even lay-skin="nob">
                                 <colgroup>
                                     <col width="50">
+                                    <col width="5">
+                                    <col width="5">
                                     <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
+                                    <col width="5">
+                                    <col width="120">
+                                    <col width="5">
                                     <col width="100">
                                     <col width="100">
                                 </colgroup>
@@ -36,49 +35,47 @@
                                         <th style="text-align: center;"><button id="selectButton" onclick="selectAll()"
                                                 class="layui-btn layui-btn-sm">全选</button></th>
                                         <th>ID</th>
-                                        <th>登录名</th>
-                                        <th>昵称</th>
-                                        <th>性别</th>
-                                        <th>地区</th>
-                                        <th>签名</th>
-                                        <th>用户状态</th>
+                                        <th>发布者</th>
+                                        <th>标题</th>
+                                        <th>分类</th>
+                                        <th>阅读 | 评论 | 收藏 | 点赞</th>
+                                        <th>帖子状态</th>
                                         <th>上次登录时间</th>
-                                        <th>注册时间</th>
+                                        <th>发布时间</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <th:block th:unless="${#lists.isEmpty(users)}">
-                                        <th:block th:each=" u, uStat : ${users}">
+                                    <th:block th:unless="${#lists.isEmpty(articles)}">
+                                        <th:block th:each=" a, aStat : ${articles}">
                                             <th:block
-                                                th:if="${uStat.index} ge ((${page} - 1) * 10) and ${uStat.index} lt (${page} * 10)">
+                                                th:if="${aStat.index} ge ((${page} - 1) * 10) and ${aStat.index} lt (${page} * 10)">
                                                 <tr>
-                                                    <td style="text-align: center;"><input th:value="${u.id}"
-                                                            name="userId" type="checkbox"></td>
-                                                    <td th:text="${u.id}">4</td>
-                                                    <td th:text="${u.loginName}">rgbugegjcmu@163.com</td>
-                                                    <td th:text="${u.nickName}">棠槿牵樱</td>
-                                                    <td th:text="${u.gender}">未知</td>
-                                                    <td th:text="${u.location}">未知</td>
-                                                    <td th:text="${u.introduce}">这个人很懒，什么都没留下~</td>
-                                                    <th:block th:if="${u.userStatus == 0}">
-                                                        <td><span class="layui-bg-green" style="padding: 5px;">正常</span>
-                                                        </td>
+                                                    <td style="text-align: center;"><input th:value="${a.id}" name="articleId" type="checkbox"></td>
+                                                    <td th:text="${a.id}">4</td>
+                                                    <td th:text="${users[a.userId].nickName} + ' id:' + ${a.userId}">棠槿牵樱 id:4</td>
+                                                    <td><a th:text="${#strings.abbreviate(a.title, 15)}" th:title="${a.title}" th:href="@{'/article/detail/' + ${a.id}}">rgbugegjcmu@163.com</a></td>
+                                                    <td th:text="${a.categoryName}">未知</td>
+                                                    <td th:text="${a.views} + ' | ' + ${a.comments} + ' | ' + ${a.collects} + ' | ' + ${a.likes}"></td>
+                                                    <th:block th:if="${a.articleStatus == 1}">
+                                                        <td><span class="layui-bg-green" style="padding: 5px;">已审核</span></td>
                                                     </th:block>
-                                                    <th:block th:if="${u.userStatus == 1}">
-                                                        <td><span class="layui-bg-red" style="padding: 5px;">冻结</span>
-                                                        </td>
+                                                    <th:block th:if="${a.articleStatus == 0}">
+                                                        <td><span class="layui-bg-red" style="padding: 5px;">未审核</span></td>
                                                     </th:block>
-                                                    <td th:text="${u.lastLoginTime}">2022-06-05 19:45:11</td>
-                                                    <td th:text="${u.createTime}">2022-05-19 08:59:15</td>
-                                                </tr>
+                                                    <th:block th:if="${a.articleStatus == 2}">
+                                                        <td><span class="layui-bg-black" style="padding: 5px;">审核失败</span></td>
+                                                    </th:block>
+                                                    <td th:text="${a.lastUpdateTime}">2022-06-05 19:45:11</td>
+                                                    <td th:text="${a.createTime}">2022-05-19 08:59:15</td>
+                                                  </tr>
                                             </th:block>
                                         </th:block>
                                     </th:block>
                                 </tbody>
                             </table>
-                            <button onclick="freezeUser()" class="layui-btn">冻结用户</button>
-                            <button onclick="unFreezeUser()" class="layui-btn">解冻用户</button>
-                            <button onclick="deleteUser()" class="layui-btn layui-bg-red">删除用户</button>
+                            <button onclick="unFreezeArticle()" class="layui-btn">通过审核</button>
+                            <button onclick="freezeArticle()" class="layui-btn">取消审核</button>
+                            <button onclick="deleteArticle()" class="layui-btn layui-bg-red">删除帖子</button>
                             <div style="text-align: center;">
                                 <div id="Claypage"></div>
                             </div>
@@ -107,14 +104,14 @@
             var $ = layui.$
 
             window.selectAll = function () {
-                $("[name = 'userId']").prop("checked", 'checked')
+                $("[name = 'articleId']").prop("checked", 'checked')
                 $('#selectButton').attr('onclick', 'selectAllCancle()')
                 $('#selectButton').attr('class', 'layui-btn layui-btn-sm layui-bg-red')
                 $('#selectButton').html("取消")
             }
 
             window.selectAllCancle = function () {
-                $("[name = 'userId']").removeAttr('checked')
+                $("[name = 'articleId']").removeAttr('checked')
                 $('#selectButton').attr('onclick', 'selectAll()')
                 $('#selectButton').attr('class', 'layui-btn layui-btn-sm')
                 $('#selectButton').html("全选")
@@ -122,22 +119,22 @@
 
             window.getChecked = function () {
                 var chk_value = [];
-                $('input[name = "userId"]:checked').each(function () {
+                $('input[name = "articleId"]:checked').each(function () {
                     chk_value.push($(this).val());
                 });
                 var is_checked = chk_value.join(',');
                 return is_checked
             }
 
-            window.unFreezeUser = function () {
+            window.unFreezeArticle = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
-                    layer.alert('请选择要解冻的用户!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    layer.alert('请选择要审核的帖子!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
                     return false;
                 }
 
-                var url = '/admin/unFreezeUser'
+                var url = '/article/unFreezeArticle'
                 var params = {
                     "arr_id": arr_id
                 }
@@ -158,15 +155,15 @@
                 });
             }
 
-            window.freezeUser = function () {
+            window.freezeArticle = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
-                    layer.alert('请选择要冻结的用户!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    layer.alert('请选择要取消审核的文章!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
                     return false;
                 }
 
-                var url = '/admin/freezeUser'
+                var url = '/article/freezeArticle'
                 var params = {
                     "arr_id": arr_id
                 }
@@ -187,7 +184,7 @@
                 });
             }
 
-            window.deleteUser = function () {
+            window.deleteArticle = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
@@ -195,7 +192,7 @@
                     return false;
                 }
                 layer.confirm('真的要删除所选数据吗', { btn: ['确定', '取消'], title: "提示" }, function () {
-                    var url = '/admin/deleteUser'
+                    var url = '/article/deleteArticle'
                     var params = {
                         "arr_id": arr_id
                     }
@@ -227,7 +224,7 @@
                 curr: page,
                 jump: function (obj, first) {
                     if (!first) {
-                        window.location.href = '/admin/userManage?page=' + obj.curr
+                        window.location.href = '/admin/articleManage?page=' + obj.curr
                     }
                 }
             });
